[package]
name = "hero-api"
version = "0.1.0"
authors = ["Ronaldo <ronaldofjc@hotmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]